# UniFree

./: .gitignore  DNSPY_PATCH_CORRECT_METHOD.md  DNSPY_PATCH_FINAL_FIX.md  DNSPY_PATCH_INSTRUCTIONS.md  EDITOR_CONNECTION_ERROR_FIX.md  FINAL_SUMMARY.md  LICENSE  NativeAot.bat  PATCH_FAILURE_DEBUG.md  PATCH_FIX_SUMMARY.md  PROJECT_COMPLETE_SUMMARY.md  PROJECT_FINAL_STATUS.md  QUICK_START.md  README.md  TROUBLESHOOTING_DLL_NOT_SAVING.md  UNIHACKER_APPROACH_ANALYSIS.md  UNIHACKER_METHOD_COMPLETE.md  UniFree.sln  analyze_crypto_dll.py  generate_signed_license.py  index.html  package-lock.json  package.json  test_exact_offsets.rs  test_il_patcher.py  test_pattern2.rs  tsconfig.json  vite.config.ts
UniFree/: FileDialog.cs  Program.cs  UniFree.csproj  WinAPI.cs
docs/: AUTOMATED_IL_PATCHER_COMPLETE.md  CONFIG_FILE_APPROACH.md  CRYPTO_DLL_ANALYSIS.md  CRYPTO_DLL_VISUAL_ANALYSIS.md  EDITOR_PATCH_UPDATE.md  EXACT_PATCHING_ANALYSIS.md  FINAL_GUIDE.md  FINAL_VERSION_README.md  PROJECT_STATUS_SUMMARY.md  SIGNATURE_MISMATCH_ISSUE.md  SIGNATURE_VERIFICATION_ISSUE.md  TEMP_SOLUTION.md  TRUE_UNIHACKER_METHOD.md  UNIHACKER_METHOD.md  UNIHACKER_TRUE_METHOD.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: Unity_lic.ulf  il_patch.py
src-tauri/src/: commands.rs  config.rs  config_patcher.rs  i18n.rs  il_patcher.rs  lib.rs  license.rs  main.rs  patcher.rs  scanner.rs
src-tauri/tests/: Cargo.toml
tests/: test_patch_detailed.rs  test_patch_live.rs  test_pattern.rs
(+8 files in other folders)
