[package]
name = "unifree"
version = "2.0.0"
edition = "2024"

[lib]
name = "unifree_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
rsa = "0.9"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
